<resources>
    <string name="app_name">GitHubMvp</string>
    <string name="action_settings">Settings</string>
    <string name="blank_view_hello_mvp">Hello MVP</string>
    <string name="sign_in_to_github">Sign in to GitHub</string>
    <string name="incorrect_username_or_password">Incorrect username or password.</string>
    <string name="username_or_email_address">Username or email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="error_sign_in">Ошибка входа</string>
</resources>
